<resources>
    <string name="app_name">ProfileCode</string>
    <string name="sign_out">Sign Out</string>
    <string name="myname">Full Name：</string>
    <string name="ghaccount_text">Github Account：</string>
    <string name="twaccount_text">Twitter Account：</string>
    <string name="save">Save</string>
    <string name="profilename">name</string>
    <string name="profilegithub">githubaccount</string>
    <string name="profiletwitter">twitteraccount</string>
    <string name="yourname">Your Name</string>
    <string name="hint">Your Account Name</string>
    <string name="nowuser">Now User Profile</string>
</resources>