<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_name_text"
            android:text="@string/myname"
            android:textSize="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/my_name_edittext"
            app:layout_constraintTop_toTopOf="@+id/my_name_edittext"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <EditText
            android:id="@+id/my_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourname"
            android:textColor="@color/edittextColor"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/my_gh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghaccount_text"
            android:textSize="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/my_gh_edittext"
            app:layout_constraintTop_toTopOf="@+id/my_gh_edittext"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <EditText
            android:id="@+id/my_gh_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textColor="@color/edittextColor"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_name_edittext"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/my_tw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twaccount_text"
            android:textSize="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/my_tw_edittext"
            app:layout_constraintBottom_toBottomOf="@+id/my_tw_edittext"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <EditText
            android:id="@+id/my_tw_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textColor="@color/edittextColor"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_gh_edittext"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <Button
            android:theme="@style/PrimaryButton"
            android:text="@string/save"
            android:textSize="32dp"
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_tw_edittext"
            android:textColor="@color/edittextColor"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"/>
</androidx.constraintlayout.widget.ConstraintLayout>