<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:id="@+id/now_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowuser"
            android:textSize="32dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/colorCardBackground"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="10dp"
            android:layout_margin="8dp"
            android:id="@+id/user_cardview"
            app:layout_constraintTop_toBottomOf="@+id/now_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/user_myname_text"
                    android:text="@string/profilename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:padding="8dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gh_constraint_layout"
                    android:layout_margin="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/user_myname_text"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent">

                <ImageView
                        android:id="@+id/user_gh_img"
                        android:src="@drawable/github_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="@+id/user_gh_text"
                        card_view:layout_constraintBottom_toBottomOf="@+id/user_gh_text"/>

                <TextView
                        android:id="@+id/user_gh_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/profilegithub"
                        android:textSize="30dp"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/user_gh_img"
                        card_view:layout_constraintTop_toTopOf="@+id/gh_constraint_layout"
                        card_view:layout_constraintBottom_toBottomOf="@+id/gh_constraint_layout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tw_constraint_layout"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/gh_constraint_layout"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent">

                <ImageView
                        android:id="@+id/user_tw_img"
                        android:src="@drawable/twitter_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:layout_marginStart="8dp"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintBottom_toBottomOf="@+id/user_tw_text"
                        card_view:layout_constraintTop_toTopOf="@+id/user_tw_text"/>


                <TextView
                        android:id="@+id/user_tw_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profiletwitter"
                        android:textSize="30dp"
                        android:padding="8dp"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/user_tw_img"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
            android:id="@+id/qrcode_imageView"
            android:layout_width="276dp"
            android:layout_height="248dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/user_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>